[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "highcharts-for-python-demos"
version = "0.1.0"
description = "Jupyter notebook demos for the Highcharts for Python toolkit"
requires-python = ">=3.12"
dependencies = [
    "highcharts-core>=1.10.3",
    "highcharts-gantt>=1.7.0",
    "highcharts-stock>=1.7.0",
    "jupyterlab>=4.4.1",
    "requests>=2.32.0",
]
